syntax = "proto3";

package go.micro.srv.GetHouseInfo;

service GetHouseInfo {
	rpc CallGetHouseInfo(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionID = 1;
	string HouseID=2;
}

message Response {
	string Error =1;
	string ErrMsg=2;
	string UserID=3;
	bytes houseInfoBytes= 4;
}